@@ -28,9 +28,15 @@ import org.akaza.openclinica.bean.core.Status;
 import org.akaza.openclinica.bean.core.Utils;
 import org.akaza.openclinica.bean.extract.ExtractBean;
 import org.akaza.openclinica.bean.managestudy.StudySubjectBean;
+import org.akaza.openclinica.dao.cache.CacheWrapper;
+import org.akaza.openclinica.dao.cache.EhCacheWrapper;
+
 import org.akaza.openclinica.i18n.util.ResourceBundleProvider;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.cache.ehcache.EhCacheManagerFactoryBean;
+import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.FileSystemResource;
 
 /**
  * <p/>
@@ -49,8 +55,10 @@ import org.slf4j.LoggerFactory;
  * At the time of writing, the only methods which execute queries are select and execute.
  * 
  * @author thickerson
+ * @param <V>
+ * @param <K>
  */
-public abstract class EntityDAO implements DAOInterface {
+public abstract class EntityDAO<K extends String,V extends ArrayList> implements DAOInterface {
     protected DataSource ds;
 
     protected String digesterName;
@@ -59,6 +67,11 @@ public abstract class EntityDAO implements DAOInterface {
 
     private HashMap setTypes = new HashMap();
 
+    /* Here is the cache reference */
+    protected EhCacheWrapper cache;
+  //  protected EhCacheWrapper cache = new EhCacheWrapper();
+    protected EhCacheManagerFactoryBean cacheManager;
+    
     // set the types we expect from the database
 
     // private ArrayList results = new ArrayList();
@@ -92,11 +105,26 @@ public abstract class EntityDAO implements DAOInterface {
     protected String oc_df_string = "";
     protected String local_df_string = "";
 
+    protected EhCacheWrapper ehCacheWrapper;
+    
     public EntityDAO(DataSource ds) {
         this.ds = ds;
         setDigesterName();
         digester = SQLFactory.getInstance().getDigester(digesterName);
         initializeI18nStrings();
+     setCache( SQLFactory.getInstance().getEhCacheWrapper());
+    }
+    
+    /**
+     * This is the method added to cache the queries
+     * @param cache
+     */
+    public void setCache(final EhCacheWrapper cache) {
+        this.cache = cache;
+    }
+
+    public EhCacheWrapper getCache(){
+        return cache;
     }
 
     /**
@@ -108,7 +136,7 @@ public abstract class EntityDAO implements DAOInterface {
      *            the number that is equal to TypeNames
      */
     public void setTypeExpected(int num, int type) {
-        setTypes.put(new Integer(num), new Integer(type));
+        setTypes.put(Integer.valueOf(num), Integer.valueOf(type));
     }
 
     public void unsetTypeExpected() {
@@ -131,6 +159,7 @@ public abstract class EntityDAO implements DAOInterface {
         ResultSet rs = null;
         Connection con = null;
         Statement ps = null;
+        logger.info("query???"+query);
         try {
             con = ds.getConnection();
             if (con.isClosed()) {
@@ -164,14 +193,16 @@ public abstract class EntityDAO implements DAOInterface {
 
     }
 
-    public ArrayList select(String query, HashMap variables) {
+    public ArrayList<V> select(String query, HashMap variables) {
         clearSignals();
 
         ArrayList results = new ArrayList();
+       
         ResultSet rs = null;
         Connection con = null;
         PreparedStatementFactory psf = new PreparedStatementFactory(variables);
         PreparedStatement ps = null;
+        
         try {
             con = ds.getConnection();
             if (con.isClosed()) {
@@ -180,14 +211,23 @@ public abstract class EntityDAO implements DAOInterface {
                 throw new SQLException();
             }
 
-            ps = con.prepareStatement(query);
+           ps = con.prepareStatement(query);
+           
+       
             ps = psf.generate(ps);// enter variables here!
+       
+            {
             rs = ps.executeQuery();
+            results = this.processResultRows(rs);
+        
+            }
+            
             if (logger.isInfoEnabled()) {
                 logger.info("Executing dynamic query, EntityDAO.select:query " + query);
             }
             signalSuccess();
-            results = this.processResultRows(rs);
+         
+              
 
         } catch (SQLException sqle) {
             signalFailure(sqle);
@@ -236,6 +276,60 @@ public abstract class EntityDAO implements DAOInterface {
         return results;
 
     }
+    
+    //JN: The following method is added for when certain queries needed caching...
+    
+    public ArrayList<V> selectByCache(String query, HashMap variables) {
+        clearSignals();
+
+        ArrayList results = new ArrayList();
+        V  value;
+        K key;
+        ResultSet rs = null;
+        Connection con = null;
+        PreparedStatementFactory psf = new PreparedStatementFactory(variables);
+        PreparedStatement ps = null;
+
+        try {
+            con = ds.getConnection();
+            if (con.isClosed()) {
+                if (logger.isWarnEnabled())
+                    logger.warn("Connection is closed: GenericDAO.select!");
+                throw new SQLException();
+            }
+
+            ps = con.prepareStatement(query);
+
+
+            ps = psf.generate(ps);// enter variables here!
+            key = (K) ps.toString();
+            if((results=(V) cache.get(key))==null)
+            {
+                rs = ps.executeQuery();
+                results = this.processResultRows(rs);
+                if(results!=null){
+                    cache.put(key,results);
+                }
+            }
+
+            if (logger.isInfoEnabled()) {
+                logger.info("Executing dynamic query, EntityDAO.select:query " + query);
+            }
+            signalSuccess();
+
+
+        } catch (SQLException sqle) {
+            signalFailure(sqle);
+            if (logger.isWarnEnabled()) {
+                logger.warn("Exception while executing dynamic query, GenericDAO.select: " + query + ":message: " + sqle.getMessage());
+                sqle.printStackTrace();
+            }
+        } finally {
+            this.closeIfNecessary(con, rs, ps);
+        }
+        return results;
+
+    }
 
     // private int[] insertKeys;
     //
@@ -280,7 +374,7 @@ public abstract class EntityDAO implements DAOInterface {
     // ArrayList keys = new ArrayList();
     // while (rs.next()) {
     // int key = rs.getInt(1);
-    // keys.add(new Integer(key));
+    // keys.add(Integer.valueOf(key));
     // }
     //
     // insertKeys = new int[keys.size()];
@@ -532,8 +626,8 @@ public abstract class EntityDAO implements DAOInterface {
 
     
     private void logMe(String message){
-      //  System.out.println(message);
-        logger.debug(message);
+        System.out.println(message);
+        logger.info(message);
     }
     public ArrayList processResultRows(ResultSet rs) {// throws SQLException
         ArrayList al = new ArrayList();
@@ -547,88 +641,97 @@ public abstract class EntityDAO implements DAOInterface {
 
                 for (int i = 1; i <= rsmd.getColumnCount(); i++) {
                     String column = rsmd.getColumnName(i).toLowerCase();
-                    Integer type = (Integer) setTypes.get(new Integer(i));
-                     logMe("column name: "+column+" type # "+type.intValue()+" row # "+i);
-                    switch (type.intValue()) {
-                    // just putting the top five in here for now, tbh
-                    // put in statements to catch nulls in the db, tbh
-                    // 10-15-2004
-                    case TypeNames.DATE:
-                        // logger.warn("date: "+column);
-                        hm.put(column, rs.getDate(i));
-                        // do we want to put in a fake date if it's null?
-                        /*
-                         * if (rs.wasNull()) { hm.put(column,new Date(System.currentTimeMillis())); }
-                         */
-                        break;
-                    case TypeNames.TIMESTAMP:
-                        // logger.warn("timestamp: "+column);
-                        hm.put(column, rs.getTimestamp(i));
-                        break;
-                    case TypeNames.DOUBLE:
-                        // logger.warn("double: "+column);
-                        hm.put(column, new Double(rs.getDouble(i)));
-                        if (rs.wasNull()) {
-                            hm.put(column, new Double(0));
-                        }
-                        break;
-                    case TypeNames.BOOL:
-                        // BADS FLAG
-                        if (CoreResources.getDBName().equals("oracle")) {
-                            hm.put(column, new Boolean(rs.getString(i).equals("1") ? true : false));
+                    Integer type = (Integer) setTypes.get(Integer.valueOf(i));
+                    // @pgawade 18-May-2011 Fix for issue #9703 - temporarily
+                    // commented out the following log statement
+                    // as in case of viewing SDV page, type value for one of
+                    // columns was null causing NullPointerException
+                    // logMe("column name: "+column+" type # "+type.intValue()+" row # "+i);
+                    if (null != type) {
+                        switch (type.intValue()) {
+                        // just putting the top five in here for now, tbh
+                        // put in statements to catch nulls in the db, tbh
+                        // 10-15-2004
+                        case TypeNames.DATE:
+                            // logger.warn("date: "+column);
+                            hm.put(column, rs.getDate(i));
+                            // do we want to put in a fake date if it's null?
+                            /*
+                             * if (rs.wasNull()) { hm.put(column,new
+                             * Date(System.currentTimeMillis())); }
+                             */
+                            break;
+                        case TypeNames.TIMESTAMP:
+                            // logger.warn("timestamp: "+column);
+                            hm.put(column, rs.getTimestamp(i));
+                            break;
+                        case TypeNames.DOUBLE:
+                            // logger.warn("double: "+column);
+                            hm.put(column, new Double(rs.getDouble(i)));
                             if (rs.wasNull()) {
-                                if (column.equalsIgnoreCase("start_time_flag") || column.equalsIgnoreCase("end_time_flag")) {
-                                    hm.put(column, new Boolean(false));
-                                } else {
-                                    hm.put(column, new Boolean(true));
+                                hm.put(column, new Double(0));
+                            }
+                            break;
+                        case TypeNames.BOOL:
+                            // BADS FLAG
+                            if (CoreResources.getDBName().equals("oracle")) {
+                                hm.put(column, new Boolean(rs.getString(i).equals("1") ? true : false));
+                                if (rs.wasNull()) {
+                                    if (column.equalsIgnoreCase("start_time_flag") || column.equalsIgnoreCase("end_time_flag")) {
+                                        hm.put(column, new Boolean(false));
+                                    } else {
+                                        hm.put(column, new Boolean(true));
+                                    }
+                                }
+                            } else {
+                                hm.put(column, new Boolean(rs.getBoolean(i)));
+                                if (rs.wasNull()) {
+                                    // YW 08-17-2007 << Since I didn't
+                                    // investigate
+                                    // what's the impact if changing true to
+                                    // false,
+                                    // I only do change for the columns of
+                                    // "start_time_flag" and "end_time_flag" in
+                                    // the
+                                    // table study_event
+                                    if (column.equalsIgnoreCase("start_time_flag") || column.equalsIgnoreCase("end_time_flag")) {
+                                        hm.put(column, new Boolean(false));
+                                    } else {
+                                        hm.put(column, new Boolean(true));
+                                    }
+                                    // bad idea? what to put, then?
                                 }
                             }
-                        } else {
-                            hm.put(column, new Boolean(rs.getBoolean(i)));
+                            break;
+                        case TypeNames.FLOAT:
+                            hm.put(column, new Float(rs.getFloat(i)));
                             if (rs.wasNull()) {
-                                // YW 08-17-2007 << Since I didn't investigate
-                                // what's the impact if changing true to false,
-                                // I only do change for the columns of
-                                // "start_time_flag" and "end_time_flag" in the
-                                // table study_event
-                                if (column.equalsIgnoreCase("start_time_flag") || column.equalsIgnoreCase("end_time_flag")) {
-                                    hm.put(column, new Boolean(false));
-                                } else {
-                                    hm.put(column, new Boolean(true));
-                                }
-                                // bad idea? what to put, then?
+                                hm.put(column, new Float(0.0));
                             }
-                        }
-                        break;
-                    case TypeNames.FLOAT:
-                        hm.put(column, new Float(rs.getFloat(i)));
-                        if (rs.wasNull()) {
-                            hm.put(column, new Float(0.0));
-                        }
-                        break;
-                    case TypeNames.INT:
-                        hm.put(column, new Integer(rs.getInt(i)));
-                        if (rs.wasNull()) {
-                            hm.put(column, new Integer(0));
-                        }
-                        break;
-                    case TypeNames.STRING:
-                        hm.put(column, rs.getString(i));
-                        if (rs.wasNull()) {
-                            hm.put(column, "");
-                        }
-                        break;
-                    case TypeNames.CHAR:
-                        hm.put(column, rs.getString(i));
-                        if (rs.wasNull()) {
-                            char x = 'x';
-                            hm.put(column, new Character(x));
-                        }
-                        break;
-                    default:
-                        // do nothing?
-                    }// end switch
-
+                            break;
+                        case TypeNames.INT:
+                            hm.put(column, Integer.valueOf(rs.getInt(i)));
+                            if (rs.wasNull()) {
+                                hm.put(column, Integer.valueOf(0));
+                            }
+                            break;
+                        case TypeNames.STRING:
+                            hm.put(column, rs.getString(i));
+                            if (rs.wasNull()) {
+                                hm.put(column, "");
+                            }
+                            break;
+                        case TypeNames.CHAR:
+                            hm.put(column, rs.getString(i));
+                            if (rs.wasNull()) {
+                                char x = 'x';
+                                hm.put(column, new Character(x));
+                            }
+                            break;
+                        default:
+                            // do nothing?
+                        }// end switch
+                    }
                 }// end for loop
                 al.add(hm);
                 // adding a row gotten from the database
@@ -714,7 +817,8 @@ public abstract class EntityDAO implements DAOInterface {
         EntityBean answer = new EntityBean();
 
         String sql = digester.getQuery(queryName);
-
+        logMe("query:"+queryName+"variables:"+variables);
+        
         ArrayList rows;
         if (variables == null || variables.isEmpty()) {
             rows = this.select(sql);
@@ -1023,9 +1127,9 @@ public abstract class EntityDAO implements DAOInterface {
                 }
 
                 // second column
-                obj.setSubjectId(new Integer(rs.getInt("subject_id")));
+                obj.setSubjectId(Integer.valueOf(rs.getInt("subject_id")));
                 if (rs.wasNull()) {
-                    obj.setSubjectId(new Integer(0));
+                    obj.setSubjectId(Integer.valueOf(0));
                 }
 
                 // old subject_identifier
@@ -1061,9 +1165,9 @@ public abstract class EntityDAO implements DAOInterface {
                     obj.setDobCollected(false);
                 }
 
-                Integer subjectStatusId = new Integer(rs.getInt("status_id"));
+                Integer subjectStatusId = Integer.valueOf(rs.getInt("status_id"));
                 if (rs.wasNull()) {
-                    subjectStatusId = new Integer(0);
+                    subjectStatusId = Integer.valueOf(0);
                 }
                 obj.setStatus(Status.get(subjectStatusId.intValue()));
 
@@ -1348,19 +1452,19 @@ public abstract class EntityDAO implements DAOInterface {
             while (rs.next()) {
 
                 // itemdataid
-                Integer vitemdataid = new Integer(rs.getInt("itemdataid"));
+                Integer vitemdataid = Integer.valueOf(rs.getInt("itemdataid"));
                 if (rs.wasNull()) {
                     // ERROR - should always be different than NULL
                 }
 
                 // itemdataordinal
-                Integer vitemdataordinal = new Integer(rs.getInt("itemdataordinal"));
+                Integer vitemdataordinal = Integer.valueOf(rs.getInt("itemdataordinal"));
                 if (rs.wasNull()) {
                     // ERROR - should always be different than NULL
                 }
 
                 // item_group_id
-                Integer vitem_group_id = new Integer(rs.getInt("item_group_id"));
+                Integer vitem_group_id = Integer.valueOf(rs.getInt("item_group_id"));
                 if (rs.wasNull()) {
                     // ERROR - should always be different than NULL
                 }
@@ -1408,10 +1512,10 @@ public abstract class EntityDAO implements DAOInterface {
                 }
 
                 // crfversionstatusid
-                Integer vcrfversionstatusid = new Integer(rs.getInt("crfversionstatusid"));
+                Integer vcrfversionstatusid = Integer.valueOf(rs.getInt("crfversionstatusid"));
                 if (rs.wasNull()) {
                     // TODO - what value default
-                    // vcrfversionstatusid = new Integer(?);
+                    // vcrfversionstatusid = Integer.valueOf(?);
                 }
 
                 // dateinterviewed
@@ -1439,49 +1543,49 @@ public abstract class EntityDAO implements DAOInterface {
                 }
 
                 // eventcrfcompletionstatusid
-                Integer veventcrfcompletionstatusid = new Integer(rs.getInt("eventcrfcompletionstatusid"));
+                Integer veventcrfcompletionstatusid = Integer.valueOf(rs.getInt("eventcrfcompletionstatusid"));
                 if (rs.wasNull()) {
                     // TODO - what value default
                 }
 
                 // repeat_number
-                Integer vrepeat_number = new Integer(rs.getInt("repeat_number"));
+                Integer vrepeat_number = Integer.valueOf(rs.getInt("repeat_number"));
                 if (rs.wasNull()) {
                     // TODO - what value default
                 }
 
                 // crfid
-                Integer vcrfid = new Integer(rs.getInt("crfid"));
+                Integer vcrfid = Integer.valueOf(rs.getInt("crfid"));
                 if (rs.wasNull()) {
                     // TODO - what value default
                 }
 
                 // studysubjectid
-                Integer vstudysubjectid = new Integer(rs.getInt("studysubjectid"));
+                Integer vstudysubjectid = Integer.valueOf(rs.getInt("studysubjectid"));
                 if (rs.wasNull()) {
                     // TODO - what value default
                 }
 
                 // eventcrfid
-                Integer veventcrfid = new Integer(rs.getInt("eventcrfid"));
+                Integer veventcrfid = Integer.valueOf(rs.getInt("eventcrfid"));
                 if (rs.wasNull()) {
                     // TODO - what value default
                 }
 
                 // itemid
-                Integer vitemid = new Integer(rs.getInt("itemid"));
+                Integer vitemid = Integer.valueOf(rs.getInt("itemid"));
                 if (rs.wasNull()) {
                     // TODO - what value default
                 }
 
                 // crfversionid
-                Integer vcrfversionid = new Integer(rs.getInt("crfversionid"));
+                Integer vcrfversionid = Integer.valueOf(rs.getInt("crfversionid"));
                 if (rs.wasNull()) {
                     // TODO - what value default
                 }
 
-                Integer eventcrfstatusid = new Integer(rs.getInt("eventcrfstatusid"));
-                Integer itemdatatypeid = new Integer(rs.getInt("itemDataTypeId"));
+                Integer eventcrfstatusid = Integer.valueOf(rs.getInt("eventcrfstatusid"));
+                Integer itemdatatypeid = Integer.valueOf(rs.getInt("itemDataTypeId"));
 
                 // add it to the HashMap
                 eb.addEntryBASE_ITEMGROUPSIDE(
@@ -1555,13 +1659,13 @@ public abstract class EntityDAO implements DAOInterface {
             while (rs.next()) {
 
                 // itemdataid
-                Integer vitemdataid = new Integer(rs.getInt("itemdataid"));
+                Integer vitemdataid = Integer.valueOf(rs.getInt("itemdataid"));
                 if (rs.wasNull()) {
                     // ERROR - should always be different than NULL
                 }
 
                 // studysubjectid
-                Integer vstudysubjectid = new Integer(rs.getInt("studysubjectid"));
+                Integer vstudysubjectid = Integer.valueOf(rs.getInt("studysubjectid"));
                 if (rs.wasNull()) {
                     // ERROR - should always be different than NULL
                 }
@@ -1573,7 +1677,7 @@ public abstract class EntityDAO implements DAOInterface {
                 }
 
                 // study_event_definition_id
-                Integer vstudy_event_definition_id = new Integer(rs.getInt("study_event_definition_id"));
+                Integer vstudy_event_definition_id = Integer.valueOf(rs.getInt("study_event_definition_id"));
                 if (rs.wasNull()) {
                     //
                 }
@@ -1665,37 +1769,37 @@ public abstract class EntityDAO implements DAOInterface {
                 }// if
 
                 // status_id
-                Integer vstatus_id = new Integer(rs.getInt("status_id"));
+                Integer vstatus_id = Integer.valueOf(rs.getInt("status_id"));
                 if (rs.wasNull()) {
                     // TODO - what value default
                 }
 
                 // subject_event_status_id
-                Integer vsubject_event_status_id = new Integer(rs.getInt("subject_event_status_id"));
+                Integer vsubject_event_status_id = Integer.valueOf(rs.getInt("subject_event_status_id"));
                 if (rs.wasNull()) {
                     // TODO - what value default
                 }
 
                 // studyeventid
-                Integer vstudyeventid = new Integer(rs.getInt("studyeventid"));
+                Integer vstudyeventid = Integer.valueOf(rs.getInt("studyeventid"));
                 if (rs.wasNull()) {
                     // TODO - what value default
                 }
 
                 // eventcrfid
-                Integer veventcrfid = new Integer(rs.getInt("eventcrfid"));
+                Integer veventcrfid = Integer.valueOf(rs.getInt("eventcrfid"));
                 if (rs.wasNull()) {
                     // TODO - what value default
                 }
 
                 // itemid
-                Integer vitemid = new Integer(rs.getInt("itemid"));
+                Integer vitemid = Integer.valueOf(rs.getInt("itemid"));
                 if (rs.wasNull()) {
                     // TODO - what value default
                 }
 
                 // crfversionid
-                Integer vcrfversionid = new Integer(rs.getInt("crfversionid"));
+                Integer vcrfversionid = Integer.valueOf(rs.getInt("crfversionid"));
                 if (rs.wasNull()) {
                     // TODO - what value default
                 }
@@ -1846,7 +1950,7 @@ public abstract class EntityDAO implements DAOInterface {
                 + sedin
                 + " 				   AND  "
                 + " 					(	study_event.sample_ordinal IS NOT NULL AND "
-                + " 						study_event.location IS NOT NULL AND "
+               // + " 						study_event.location IS NOT NULL AND " //JN:Starting 3.1 study event location is no longer null
                 + " 						study_event.date_start IS NOT NULL  "
                 + " 					) "
                 + " 				   AND "
@@ -1980,7 +2084,7 @@ public abstract class EntityDAO implements DAOInterface {
                 + sedin
                 + "                  AND  "
                 + "                   (   study_event.sample_ordinal IS NOT NULL AND "
-                + "                       study_event.location IS NOT NULL AND "
+              //  + "                       study_event.location IS NOT NULL AND " JN: starting 3.1 study_event.location can be null
                 + "                       study_event.date_start IS NOT NULL  "
                 + "                   ) "
                 + "                  AND "
@@ -3010,4 +3114,7 @@ public abstract class EntityDAO implements DAOInterface {
         }
         return statusConstraint;
     }
+    
+    
+    
 }
